# coursework

./: README.md
coursework/: CMakeLists.txt  client_resources.rc  desktop.ini
coursework/documents/: coursework.txt  test123.txt
coursework/include/: InvertedIndex.h  UserManagement.h  WebServer.h
coursework/src/: InvertedIndex.cpp  UserManagement.cpp  WebServer.cpp  client.cpp  server.cpp
coursework/static/: index.html  script.js  style.css
system_model/: desktop.ini
test-getindex/: index_get_index.html  statistics.json
test-getindex/content/js/: dashboard.js  graph.js
test-getindex/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
test-getscript/: index.html  statistics.json
test-getscript/content/js/: dashboard.js  graph.js
test-getscript/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
test-getstyle/: index.html  statistics.json
test-getstyle/content/js/: dashboard.js  graph.js
test-getstyle/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
test-postlist/: index.html  statistics.json
test-postlist/content/js/: dashboard.js  graph.js
test-postlist/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
test-postsearch/: index.html  statistics.json
test-postsearch/content/js/: dashboard.js  graph.js
test-postsearch/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
